syntax = "proto3";

package rhythmicity.main_api;

option go_package = "github.com/nichol20/rhythmicity/data-api/internal/pb";

import "common.proto";
import "artist.proto";

message AlbumSpotify {
    string id = 1;
    uint32 popularity = 2;
    repeated Image images = 3;
    string releaseDate = 4;
}

message AlbumMessage {
    string id = 1;
    string name = 2;
    repeated string genres = 3;
    repeated string styles = 4;
    uint32 totalTracks = 5;
    AlbumSpotify spotify = 6;
    repeated SimplifiedArtist artists = 7;
}

message SimplifiedAlbum {
    string id = 1;
    string name = 2;
}

message GetPopularAlbumsRequest {
    optional uint32 limit = 1;
    optional uint32 offset = 2;
}

message MultipleAlbums {
    repeated AlbumMessage albums = 1;
}

service Album {
    rpc GetPopularAlbums(GetPopularAlbumsRequest) returns (MultipleAlbums){};
    rpc GetAlbum(RequestById) returns (AlbumMessage){};
    rpc GetSeveralAlbums(RequestByIds) returns (MultipleAlbums){};
    rpc GetAlbumByTrackId(RequestById) returns (AlbumMessage){};
    rpc GetAlbumsByArtistId(RequestById) returns (MultipleAlbums){};
}